finished comparing constituents!

--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -1167,9 +1167,9 @@ In the remainder of this section, I discuss the two light heads that I compare t
 \bg. d-ën\\
  \tsc{lh}.\tsc{m}.\tsc{acc}\\
 
-The functional sequence for the light head is as shown in \ref{ex:fseq-lh-rep-ohg}.
+The functional sequence for the light head is as shown in \ref{ex:fseq-lh-ohg}.
 
-\ex.\label{ex:fseq-lh-rep-ohg}
+\ex.\label{ex:fseq-lh-ohg}
  \begin{forest} boom
    [\tsc{k}P
        [\tsc{k}]
@@ -1486,10 +1486,9 @@ In Figure \ref{fig:ohg-int=ext-lh}, I give the syntactic structure of the light 
         \begin{forest} boom
           [DP, s sep=15mm,
           tikz={
-          \node[draw,
-          constituent-deletion,yshift=-0.3cm,
+          \node[draw,circle,
           dotted,
-          scale=1.35,
+          scale=0.95,
           fit to=tree]{};
           }
               [DP,
@@ -1524,7 +1523,7 @@ In Figure \ref{fig:ohg-int=ext-lh}, I give the syntactic structure of the light 
         [\tsc{rel}P, s sep=17.5mm,
         tikz={
         \node[draw,
-        constituent-deletion,yshift=-0.4cm,
+        constituent-deletion,yshift=-0.4cm,rounded corners=2.7cm,
         dotted,
         fill=DG,fill opacity=0.2,
         scale=1.25,
@@ -1570,7 +1569,7 @@ Again, I circle the part of the structure that corresponds to a particular lexic
 I draw a dotted circle around the biggest possible element that formally contained in both the light head and the relative pronoun.
 
 The relative pronoun (the \tsc{rel}P realized by \tit{dher}) is formally contained within the light head (the DP realized by \tit{dher}).
-Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
+Therefore, the relative pronoun can be deleted. I signal the deletion of the relative pronoun by marking the content of its circle gray.
 The surface pronoun is the light head that bears the external case: \tit{dher}.\footnote{
 The same holds the other way around: the light head (the DP realized by \tit{dher}) is formally contained within the relative pronoun (the \tsc{rel}P realized by \tit{dher}). Therefore, with the information I have given so far, it could also be that the light head is deleted. In Section \ref{sec:coming-back} I discuss the larger syntactic structure of headless relatives and I show in this case only the relative pronoun can be deleted because of c-command relations.
 }
@@ -1585,10 +1584,10 @@ In \ref{ex:ohg-acc-nom-lh}, the light head \tit{dhen} `\tsc{dem}.\ac{sg}.\ac{m}.
 
 \ex.\label{ex:ohg-acc-nom-rep}
 \ag. *ih bibringu fona iacobes samin endi fona iuda [en] \tbf{dher} \tbf{mina} \tbf{berga} \tbf{chisitzit}\\
-1\ac{sg}.\ac{nom} {create}.\ac{pres}.1\ac{sg}\scsub{[acc]} of Jakob.\ac{gen} seed.\ac{sg}.\ac{dat} and of Judah.\ac{dat} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} my.\ac{acc}.\ac{m}.\ac{pl} mountain.\ac{acc}.\ac{pl} possess.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
+1\ac{sg}.\ac{nom} {create}.\ac{pres}.1\ac{sg}\scsub{[acc]} of Jakob.\ac{gen} seed.\ac{sg}.\ac{dat} and of Judah.\ac{dat} \ac{elh}.\ac{sg}.\ac{m}.\ac{acc} \ac{rp}.\ac{sg}.\ac{m}.\ac{nom} my.\ac{acc}.\ac{m}.\ac{pl} mountain.\ac{acc}.\ac{pl} possess.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
 `I create of the seed of Jacob and of Judah the one, who possess my mountains' \flushfill{Old High German, \ac{isid} 34:3}\label{ex:ohg-acc-nom-elh}
 \bg. ih bibringu fona iacobes samin endi fona iuda dhen [\tbf{dher}] \tbf{mina} \tbf{berga} \tbf{chisitzit}\\
-1\ac{sg}.\ac{nom} {create}.\ac{pres}.1\ac{sg}\scsub{[acc]} of Jakob.\ac{gen} seed.\ac{sg}.\ac{dat} and of Judah.\ac{dat} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} my.\ac{acc}.\ac{m}.\ac{pl} mountain.\ac{acc}.\ac{pl} possess.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
+1\ac{sg}.\ac{nom} {create}.\ac{pres}.1\ac{sg}\scsub{[acc]} of Jakob.\ac{gen} seed.\ac{sg}.\ac{dat} and of Judah.\ac{dat} \ac{dem}.\ac{sg}.\ac{m}.\ac{acc} \ac{rp}.\ac{sg}.\ac{m}.\ac{nom} my.\ac{acc}.\ac{m}.\ac{pl} mountain.\ac{acc}.\ac{pl} possess.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
 `I create of the seed of Jacob and of Judah the one, who possess my mountains' \flushfill{Old High German, \ac{isid} 34:3}\label{ex:ohg-acc-nom-lh}
 
 Only \ref{ex:ohg-acc-nom-lh} can be the source that the headless relative is derived from. First I show that no headless relative can be derived from the \ref{ex:ohg-acc-nom-elh}. Then I show the comparison of the two internal syntax of the two forms in \ref{ex:ohg-acc-nom-lh}, which does derive a grammatical result.
@@ -1614,7 +1613,7 @@ In Figure \ref{fig:ohg-ext-wins-elh}, I give the syntactic structure of the extr
             [\tsc{f}2]
             [\tsc{acc}P,
             tikz={
-            \node[draw,circle,
+            \node[draw, circle,
             dashed,
             scale=0.8,
             fit to=tree]{};
@@ -1687,10 +1686,9 @@ In Figure \ref{fig:ohg-ext-wins-lh}, I give the syntactic structure of the light
         \begin{forest} boom
           [DP, s sep=15mm,
           tikz={
-          \node[draw,
-          constituent-deletion,yshift=-0.3cm,
+          \node[draw,circle,
           dotted,
-          scale=1.35,
+          scale=0.95,
           fit to=tree]{};
           }
               [DP,
@@ -1728,7 +1726,7 @@ In Figure \ref{fig:ohg-ext-wins-lh}, I give the syntactic structure of the light
         [\tsc{rel}P, s sep=17.5mm,
         tikz={
         \node[draw,
-        constituent-deletion,yshift=-0.4cm,
+        constituent-deletion,yshift=-0.4cm,rounded corners=2.7cm,
         dotted,
         scale=1.25,
         fit to=tree]{};
@@ -1776,15 +1774,15 @@ The light head is realized as \tit{dhen}, and the relative pronoun is realized a
 The light head is not formally contained within the relative pronoun, and the relative pronoun is not formally contained within the light head.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
 The inevitable result seems to be that the light-headed relative with the light head cannot be the source of the headless relative.
-This is not what the data suggests, however, as a more complex case is allowed to surface in Old High German.
+This is not what the data suggests, however, as a more complex external case is allowed to surface in Old High German.
 
-we need to look at the larger syntactic structure. repeat example here
+To understand how a grammatical headless relative with a more complex external case gets to surface, the larger syntactic structure needs to be considered. I repeat light-headed relative that is the source of the example from \ref{ex:ohg-acc-nom-lh} in \ref{ex:ohg-acc-nom-lh-rep}.
 
-\ex. only with den der
+\exg. ih bibringu fona iacobes samin endi fona iuda dhen [\tbf{dher}] \tbf{mina} \tbf{berga} \tbf{chisitzit}\\
+1\ac{sg}.\ac{nom} {create}.\ac{pres}.1\ac{sg}\scsub{[acc]} of Jakob.\ac{gen} seed.\ac{sg}.\ac{dat} and of Judah.\ac{dat} \ac{dem}.\ac{sg}.\ac{m}.\ac{acc} \ac{rp}.\ac{sg}.\ac{m}.\ac{nom} my.\ac{acc}.\ac{m}.\ac{pl} mountain.\ac{acc}.\ac{pl} possess.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
+`I create of the seed of Jacob and of Judah the one, who possess my mountains' \flushfill{Old High German, \ac{isid} 34:3}\label{ex:ohg-acc-nom-lh-rep}
 
-I draw a tree of the light head and the relative clause
-
-Consider the larger syntactic structure in \ref{ex:ohg-syntax-ext-wins} that represents part of the sentence in \ref{ex:ohg-acc-nom-lh}.
+Consider the syntactic structure in \ref{ex:ohg-syntax-ext-wins} that represents part of the sentence in \ref{ex:ohg-acc-nom-lh-rep}.
 
 \ex.\label{ex:ohg-syntax-ext-wins}
  \begin{adjustbox}{max width=0.9\textwidth}
@@ -1793,9 +1791,9 @@ Consider the larger syntactic structure in \ref{ex:ohg-syntax-ext-wins} that rep
     [DP, s sep=15mm,
     tikz={
     \node[draw,
-    constituent-deletion,yshift=-0.3cm,
+    circle,
     dotted,
-    scale=1.3,
+    scale=0.95,
     fit to=tree]{};
     }
         [DP,
@@ -1827,7 +1825,7 @@ Consider the larger syntactic structure in \ref{ex:ohg-syntax-ext-wins} that rep
         [\tsc{rel}P, s sep=15mm,
         tikz={
         \node[draw,
-        constituent-deletion,yshift=-0.4cm,
+        constituent-deletion,yshift=-0.4cm,rounded corners=2.6cm,
         dotted,
         scale=1.25,
         fit to=tree]{};
@@ -1865,12 +1863,11 @@ Consider the larger syntactic structure in \ref{ex:ohg-syntax-ext-wins} that rep
 \end{forest}
 \end{adjustbox}
 
-The DP on the left represents the light head from Figure X, the RelP in the middle is the relative pronoun from Figure X. The lower CP on the right contains relative clause besides for the relative pronoun.
-
-This structure has come into being by merging features one by one. The last feature that has been merged is \tsc{f}2, that made the relative pronoun an \tsc{acc}P. Remember from the functional sequence in X that the case features are the highest features, so they are the last ones to be merged.\footnote{
-These features end up within the left DP via Backtracking, splitting up the separate workspaces (DP and CP), further Backtracking, splitting up DP and \tsc{acc}P and also \tsc{rel}P and CP. The first can be spelled out first on the \tsc{acc}P, so that is where it is realized.
+The DP in the left (that spells out as \tit{dhen}) is the light head from \ref{fig:ohg-ext-wins-lh}. The \tsc{rel}P in the middle (that spells out as \tit{dher}) is the relative pronoun from \ref{fig:ohg-ext-wins-lh}. The CP on the right represents the relative clause without the relative pronoun. I do not show its internal structure, as it is not relevant for the discussion.
+The remainder of the main clause is also not part of the syntactic structure. This is because at this point in the derivation the features that spell out \tit{ih bibringu fona iacobes samin endi fona iuda} `I bring of the seed of Jacob and of Judah' have not been merged yet. This structure has come into being by merging features one by one. The last feature that has been merged is \tsc{f}2, which created the relative pronoun an \tsc{acc}P. Remember from the functional sequence in \ref{ex:fseq-lh-ohg} that case features are the highest features, so they are the last ones to be merged.\footnote{
+These features end up in their position via several steps of Backtracking in which different workspaces are split up and features are merged in both workspaces, as explained in Chapter \ref{ch:deriving-onlyinternal}. First, the DP and the highest CP are split up and \tsc{f}2 is merged in both workspaces. None of them leads to a successful spellout, so both workspaces are split up further, giving four workspaces: a DP, an \tsc{nom}P, a \tsc{rel}P and the lowest CP. Now \tsc{f}2 can be spelled out with the \tsc{nom}P. All worskpaces are merged back together and the result is the structure in \ref{fig:ohg-ext-wins-lh}
 }
-This means that one step in the derivation ago, the syntactic structure looked as in \ref{ex:ohg-syntax-ext=int}.
+Before the feature \tsc{f}2 was merged, the syntactic structure looked as in \ref{ex:ohg-syntax-ext=int}.
 
 \ex.\label{ex:ohg-syntax-ext=int}
 \begin{adjustbox}{max width=0.9\textwidth}
@@ -1878,10 +1875,9 @@ This means that one step in the derivation ago, the syntactic structure looked a
 [, s sep=20mm
     [DP, s sep=15mm,
     tikz={
-    \node[draw,
-    constituent-deletion,yshift=-0.3cm,
+    \node[draw,circle,
     dotted,
-    scale=1.3,
+    scale=0.95,
     fit to=tree]{};
     }
         [DP,
@@ -1910,7 +1906,7 @@ This means that one step in the derivation ago, the syntactic structure looked a
         [\tsc{rel}P, s sep=15mm,
         tikz={
         \node[draw,
-        constituent-deletion,yshift=-0.4cm,
+        constituent-deletion,yshift=-0.4cm,rounded corners=2.6cm,
         dotted,
         fill=DG,fill opacity=0.2,
         scale=1.25,
@@ -1949,14 +1945,95 @@ This means that one step in the derivation ago, the syntactic structure looked a
 \end{forest}
 \end{adjustbox}
 
-Comparing the internal syntax of the light head and the relative pronoun at this stage.. see Figure X
-I describe in words what happens there.
+The DP in the left (that spells out as \tit{dher}) is the light head from \ref{fig:ohg-int=ext-lh}. The \tsc{rel}P in the middle (that spells out as \tit{dher}) is the relative pronoun from \ref{fig:ohg-int=ext-lh}.
+At this point in the derivation, the relative pronoun is formally contained within the light head.
+Therefore, the relative pronoun can be deleted. I signal the deletion of the relative pronoun by marking the content of its circle gray in \ref{ex:ohg-syntax-ext=int}.
+The surface pronoun is the light head that bears the external case: \tit{dher}.
 
-Then the feature \tsc{f}2 is merged, and we see the effect of if had the external case deleted the internal case.
+Then the feature \tsc{f}2 is merged, and the light head is spelled out as \tit{dhen}, as shown in \ref{ex:ohg-syntax-ext-wins-afterdeletion}.
 
-%%blabla finish this
+\ex.\label{ex:ohg-syntax-ext-wins-afterdeletion}
+\begin{adjustbox}{max width=0.9\textwidth}
+\begin{forest} boom
+[, s sep=20mm
+    [DP, s sep=15mm,
+    tikz={
+    \node[draw,circle,
+    dotted,
+    scale=0.95,
+    fit to=tree]{};
+    }
+        [DP,
+        tikz={
+        \node[label=below:\tit{dh},
+        draw,circle,
+        scale=0.85,
+        fit to=tree]{};
+        }
+            [\phantom{xxx}, roof]
+        ]
+        [\tsc{acc}P,
+        tikz={
+        \node[label=below:\tit{en},
+        draw,circle,
+        scale=0.85,
+        fit to=tree]{};
+        }
+            [\tsc{f}2]
+            [\tsc{nom}P
+                [\tsc{f}1]
+                [\tsc{ind}P
+                    [\phantom{xxx}, roof, baseline]
+                ]
+            ]
+        ]
+    ]
+    [CP, s sep=15mm
+        [\tsc{rel}P, s sep=15mm,
+        tikz={
+        \node[draw,
+        constituent-deletion,yshift=-0.4cm,rounded corners=2.6cm,
+        dotted,
+        fill=DG,fill opacity=0.2,
+        scale=1.25,
+        fit to=tree]{};
+        }
+            [\tsc{rel}P,
+            tikz={
+            \node[label=below:\tit{dh},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{rel}]
+                [DP
+                    [\phantom{xxx}, roof]
+                ]
+            ]
+            [\tsc{nom}P,
+            tikz={
+            \node[label=below:\tit{er},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{f}1]
+                [\tsc{ind}P
+                    [\phantom{xxx}, roof]
+                ]
+            ]
+        ]
+        [CP
+             [\tit{mina berga chisitzit}, roof]
+        ]
+    ]
+]
+\end{forest}
+\end{adjustbox}
 
-
+The relative pronoun has been deleted in the previous stage of the derivation, so it is still absent. However, it is no longer the case that the light head formally contains the relative pronoun. This example shows that it is crucial to not only consider the endpoint of a derivation, but also the steps in between.\footnote{
+For Modern German and Polish these steps in between do not make a difference. The reason for that is that it is only relevant when the external case is more complex than the internal one. When the cases match, the endpoint of the derivation is the step in between that might be relevant, and I explain in what follows why the cases never match when the internal case is more complex. In the situation in which the external case is more complex Modern German and Polish are not helped, there is no syncretism between light heads and relative pronouns. Therefore, there is never any formal containment that can lead to a deletion.
+}
 
 I end with the situation in which the internal case is the more complex one.
 Consider the examples in \ref{ex:ohg-nom-acc-rep}, in which the internal accusative case competes against the external nominative case. The relative clause is marked in bold. \ref{ex:ohg-nom-acc-elh} shows the example with the extra light head and \ref{ex:ohg-acc-nom-lh} shows the example with the light head.
@@ -2041,7 +2118,7 @@ In Figure \ref{fig:ohg-int-wins-elh}, I give the syntactic structure of the extr
   \end{tabular}
   \end{adjustbox}
    \caption {Old High German \tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{acc} → \tit{then}}
-  \label{fig:ohg-int-wins}
+  \label{fig:ohg-int-wins-elh}
 \end{figure}
 
 The relative pronoun consists of two morphemes: \tit{th} and \tit{en}.
@@ -2065,10 +2142,9 @@ In Figure \ref{fig:ohg-int-wins-lh}, I give the syntactic structure of the light
         \begin{forest} boom
           [DP, s sep=15mm,
           tikz={
-          \node[draw,
-          constituent-deletion,yshift=-0.3cm,
+          \node[draw,circle,
           dotted,
-          scale=1.35,
+          scale=-0.95,
           fit to=tree]{};
           }
               [DP,
@@ -2084,7 +2160,7 @@ In Figure \ref{fig:ohg-int-wins-lh}, I give the syntactic structure of the light
               tikz={
               \node[label=below:\tit{er},
               draw,circle,
-              scale=0.85,
+              scale=0.8,
               fit to=tree]{};
               }
                   [\tsc{f}1]
@@ -2103,7 +2179,7 @@ In Figure \ref{fig:ohg-int-wins-lh}, I give the syntactic structure of the light
         [\tsc{rel}P, s sep=17.5mm,
         tikz={
         \node[draw,
-        constituent-deletion,yshift=-0.4cm,
+        constituent-deletion,yshift=-0.4cm,rounded corners=3.3cm,
         dotted,
         scale=1.25,
         fit to=tree]{};
@@ -2142,7 +2218,7 @@ In Figure \ref{fig:ohg-int-wins-lh}, I give the syntactic structure of the light
   \end{tabular}
   \end{adjustbox}
   \caption {Old High German \tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{acc} ↛ \tit{ther}/\tit{then} (\tsc{lh})}
-  \label{fig:ohg-ext-wins-lh}
+  \label{fig:ohg-int-wins-lh}
 \end{figure}
 
 The relative pronoun consists of two morphemes: \tit{dh} and \tit{en}.
@@ -2155,8 +2231,7 @@ The light head is not formally contained within the relative pronoun, and the re
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
 As a result, the light-headed relative with the extra light head cannot be the source of the headless relative.
 
-Also this at some point in the derivation does not work. It's the relative pronoun that has too many cases, so taking of case features from that one does not help.
-
+In this situation, when the internal case is more complex than the external one, it does not make a difference to look at previous steps in the derivation. Going back in the derivation removes case features from the light head (so external case features) and not those from the relative pronoun. The last case feature was merged on the relative pronoun before the first case feature was merged on the light head. As long as the internal case is more complex, there is no step in the derivation in which the cases match.
 
 
 \section{Coming back to the light heads}\label{sec:coming-back}
