after update (deleted cinque from ohg)
also finished drafting last section

--- a/introduction.tex
+++ b/introduction.tex
@@ -3,6 +3,12 @@
 \chapter{Introduction}
 
 This dissertation is about case competition, a situation in which two cases are assigned but only one of them surfaces. One of the constructions in which case competition appears is relative clauses that lack a head, i.e. headless relatives.
+
+I will show in this dissertation that case competition has a few properties that hold for all languages and few that differ across languages.
+If you look from a distance, you can't make much sense of it.
+However, if you look more closely and zoom in on the morphology of the language, then it can all be explained.
+It turns out that everything needed to account for the phenomenon can independently motivated: there is a case hierarchy deeply ingrained in syntax and there is deletion under c-command under containment (structural and formal).
+
 Before I discuss what this dissertation is about, I first introduce what I mean exactly with case competition in headless relatives.
 Then I discuss the content of the dissertation, going step by step through the different aspects of case competition in headless relatives.
 This chapter ends with a section on what this dissertation does not discuss.
