--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -2236,44 +2236,48 @@ In this situation, when the internal case is more complex than the external one,
 
 \section{Coming back to the light heads}\label{sec:coming-back}
 
+I come back to the two light heads.
+I show that there is no independent evidence from interpretation that there are two different sources for the headless relatives.
+Arguing for two different light heads seems to be a good idea in light of the larger syntactic structure. This allows me to say that there is deletion under c-command. The light heads appear in positions where Cinque also put them.
 
 
-I assume that a syntactic structure of a light-headed relative looks as in X\footnote{
-I actually assume that a light-headed relative with an extra light looks as in X
+\subsection{The interpretation of Old High German headless relatives}
 
-\ex. here an example with a non-D with the head in the low position
+it is difficult to do this kind of research with a dead language, because you interpret something from a context and you look at what you find. it can also be that something is possible, but you just don't see it. that actually also holds for my case story..
 
-here explain what is in the example.
-This is also what Cinque says: non-definite heads are low, and definite heads are high.
-Two questions follow from such an analysis: (1) how do the case features end up down there, and (2) what triggers the movement of the light head to the higher position. About (1), Cinque says that it is feature percolation, and I follow that intuition. Technically, what's happening is backtracking, opening up the different workspaces, which leads to the case features finding a match on the element to the left of the relative clause. Concerning (2), Cinque says it's movement, I'm not sure what it's triggered by. I don't know what it is. If it's movement, then it can be triggered by spellout or by features. I don't see how either of them should work. It could be connected to the formation of a complex spec. It seems that as soon the spec is there, the light head also moves up, and the complex spec does not attach to the relative clause. I leave this for future research.
-}
+Headless relatives in which the relative pronoun starts with a \tit{d}, such as in Old High German, seem to be linked to individuating or definite readings and not to generalizing or indefinite readings \citep[cf.][]{fuss2017}.
 
-\ex. here an example of a high D and the relative clause below it
+this is confirmed by my data from \ref{ch:typology}.
 
-There is a D, which appears higher in the structure than the relative clause, etc. etc. explanation
-the relative clause is already complete, including case features
-This structure for light-headed relatives is also assumed by cf. Cinque etc. etc.
-the features that are merged last in building a light head are the case features. first we have a D without case features, and then the case features are merged on by one. this means that we have a stage in the dervation dathat looks like:
+\exg. gihortut ir \tbf{thiu} \tbf{ih} \tbf{íu} \tbf{quad}\\
+ listen.\ac{pst}.2\ac{pl}\scsub{[acc]} 2\ac{pl}.\ac{nom} \tsc{rp}.\ac{pl}.\ac{n}.\ac{acc} 1\ac{sg}.\ac{nom} 2\ac{pl}.\ac{dat} speak.\ac{pst}.1\ac{sg}\scsub{[acc]}\\
+ `you listened to those things, that I said to you' \flushfill{Old High German, \ac{tatian} 165:6}\label{ex:ohg-acc-acc-rep}
 
-\ex. no cases, including relative pronoun and relative clause
+A matching example can have two different sources:
+-one with a light head
+- one with an extra light head
 
-\ex. only nominative case
+\ex.
+\ag. gihortut ir thiu \tbf{iu} \tbf{ih} \tbf{íu} \tbf{quad}\\
+ listen.\ac{pst}.2\ac{pl}\scsub{[acc]} 2\ac{pl}.\ac{nom} \tsc{elh}.\ac{pl}.\ac{n}.\ac{nom} \tsc{rp}.\ac{pl}.\ac{n}.\ac{acc} 1\ac{sg}.\ac{nom} 2\ac{pl}.\ac{dat} speak.\ac{pst}.1\ac{sg}\scsub{[acc]}\\
+ `you listened to those things, that I said to you' \flushfill{Old High German, \ac{tatian} 165:6}\label{ex:ohg-acc-acc-rep}
+\bg. gihortut ir thiu \tbf{thiu} \tbf{ih} \tbf{íu} \tbf{quad}\\
+ listen.\ac{pst}.2\ac{pl}\scsub{[acc]} 2\ac{pl}.\ac{acc} \tsc{dem}.\ac{pl}.\ac{n}.\ac{nom} \tsc{rp}.\ac{pl}.\ac{n}.\ac{nom} 1\ac{sg}.\ac{nom} 2\ac{pl}.\ac{dat} speak.\ac{pst}.1\ac{sg}\scsub{[acc]}\\
+ `you listened to those things, that I said to you' \flushfill{Old High German, \ac{tatian} 165:6}\label{ex:ohg-acc-acc-rep}
 
-now there's deletion!
+For other examples I do not know what the source structure is. Consider Table X.
 
-then we merge the next case feature, and we get a more complex external case
+-now repeat table-
 
-note that we also have c-command for the deletion! great!\footnote{
-coming back the extra light head, we also have c-command there, under the defininteino of kayne
-}
-
-
-Headless relatives in which the relative pronoun starts with a \tit{d}, such as in Old High German, seem to be linked to individuating or definite readings and not to generalizing or indefinite readings \citep[cf.][]{fuss2017}. I illustrate this with the two examples I repeat from Chapter  \ref{ch:typology}.
+The grammatical headless relative with a more complex internal case needs to be derived from a light-headed relative headed by an extra light head.
+the other one does not work, does not generate grammatical example
+The grammatical headless relative with a more complex external case needs to be derived form a light-headed relative headed by a light head.
+idem
 
 Consider the example in \ref{ex:ohg-nom-acc-interpretation}, repeated from Chapter \ref{ch:typology}.
 In this example, the author refers to the specific person which was talked about, and not to any or every person that was talked about.
 
-%int = acc, ext = nom, so extra light head, but individuation so light head expected
+%int>ext, int = acc, ext = nom, so extra light head, but individuation so light head expected
 \exg. Thíz ist \tbf{then} \tbf{sie} \tbf{zéllent}\\
 \ac{dem}.\ac{sg}.\ac{n}.\ac{nom} be.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc}
 3\ac{pl}.\ac{m}.\ac{nom} tell.\ac{pres}.3\ac{pl}\scsub{[acc]}\\
@@ -2283,171 +2287,182 @@ not: `this is whoever they talk about' \flushfill{Old High German, \ac{otfrid} I
 Consider also the example in \ref{ex:ohg-nom-acc-interpretation}, repeated from Chapter \ref{ch:typology}.
 In this example, the author refers to the specific person who spoke to someone, and not to any or every person who spoke to someone.
 
-%int = nom, ext = dat, so light head, and individuation so light head also expected
+%ext>int, int = nom, ext = dat, so light head, and individuation so light head also expected
 \exg. enti aer {ant uurta} demo \tbf{zaimo} \tbf{sprah}\\
 and 3\ac{sg}.\ac{m}.\ac{nom} reply.\ac{pst}.3\ac{sg}\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} {to 3\ac{sg}.\ac{m}.\ac{dat}} speak.\ac{pst}.3\ac{sg}\scsub{[nom]}\\
 `and he replied to the one who spoke to him'\\
 not: `and he replied to whoever spoke to him'
  \flushfill{Old High German, \ac{mons} 7:24, adapted from \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom-rep-1}
 
+conclusion: all are definite
+First internal more complex but individuating: there is still the \tit{d} in the relative pronoun, so this could also cause the definite interpretation
+
+I do not have evidence for either of the light heas generating a different interpretation.
+this means that there is no independent evidence from interpratation that there are different sources for
 
 
+\subsection{The larger syntactic structure and deletion operation}
 
+in this section..
 
+consider
 
-
-
-
-
-
-  - possible prediction: ext>int = def, int>ext = wh, not what we see, show 4 examples
-
-
-
-Consider the example in \ref{ex:ohg-nom-acc-interpretation}, repeated from Chapter \ref{ch:typology}.
-In this example, the author refers to the specific person which was talked about, and not to any or every person that was talked about.
-
-%int = acc, ext = nom, so extra light head, but individuation so light head expected
-\exg. Thíz ist \tbf{then} \tbf{sie} \tbf{zéllent}\\
-\ac{dem}.\ac{sg}.\ac{n}.\ac{nom} be.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc}
-3\ac{pl}.\ac{m}.\ac{nom} tell.\ac{pres}.3\ac{pl}\scsub{[acc]}\\
-`this is the one whom they talk about'\\
-not: `this is whoever they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc-interpretation}
-
-Consider also the example in \ref{ex:ohg-nom-acc-interpretation}, repeated from Chapter \ref{ch:typology}.
-In this example, the author refers to the specific person who spoke to someone, and not to any or every person who spoke to someone.
-
-%int = nom, ext = dat, so light head, and individuation so light head also expected
-\exg. enti aer {ant uurta} demo \tbf{zaimo} \tbf{sprah}\\
-and 3\ac{sg}.\ac{m}.\ac{nom} reply.\ac{pst}.3\ac{sg}\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} {to 3\ac{sg}.\ac{m}.\ac{dat}} speak.\ac{pst}.3\ac{sg}\scsub{[nom]}\\
-`and he replied to the one who spoke to him'\\
-not: `and he replied to whoever spoke to him'
- \flushfill{Old High German, \ac{mons} 7:24, adapted from \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom-rep}
-
-
-
-
-
-
-
-
-
-
- Old High German is special because the relative pronoun in its headless relatives is syncretic with the relative pronoun in its light-headed relatives.
-
- This light head story never works for Modern German or Polish because for them the relative pronoun and the light head are not syncretic: \tit{den}-\tsc{wen} and \tit{tego}-\tit{kogo}
-
-
- According to Cinque, every type of relative clause in every language is underlyingly double-headed. Evidence for this claim comes from languages that show this morphologically. An example from Kombai is given in \ref{ex:kombai}. The head of the relative clause is \tit{doü} `sago', and it appears inside the relative clause and outside.
-
- \exg. [\tbf{doü} adiyan-o-no] \tbf{doü} deyalukhe\\
-  sago give.3\tsc{pl}.\tsc{nonfut}-{tr}-\tsc{conn} sago finished.\tsc{adj}\\
-  `The sago that they gave is finished.' \flushfill{Kombai, \pgcitealt{vries1993}{78}}\label{ex:kombai}
-
- The internal and external instances of \tit{doü} correspond to the internal and external element I assume to be there in the headless relatives.
-
- \ref{ex:double-syntax} shows the syntactic structure of the sentence in \ref{ex:kombai}.
-
- \ex.
- \begin{forest} boom
- [CP
-    [FP
-       [CP
-           [\tsc{int}
-              [\tit{doü}, roof]
-           ]
-           [CP
-               [\tit{adiyan-o-no}, roof]
-           ]
-       ]
-       [\tsc{ext}
-          [\tit{doü}, roof]
-       ]
-    ]
-    [VP
-       [\tit{deyalukhe}, roof]
-    ]
- ]
- \end{forest}\label{ex:double-syntax}
-
- In most languages one of the two heads is deleted throughout the derivation.
-
- According to \citealt{cinqueforthcoming}, the internal element can delete the external element, because the internal element c-commands the external element. This is c-command according to Kayne's definition of it: the internal element is in the specifier of the specifier of the FP.
-
- \ex.
- \begin{forest} boom
- [
-    [CP
-        [\tsc{int}
-           [\phantom{xxx}, roof]
-        ]
-        [CP
+\ex.\label{ex:ohg-syntax-ext=int-rep}
+\begin{adjustbox}{max width=0.9\textwidth}
+\begin{forest} boom
+[, s sep=20mm
+    [DP, s sep=15mm,
+    tikz={
+    \node[draw,circle,
+    dotted,
+    scale=0.95,
+    fit to=tree]{};
+    }
+        [DP,
+        tikz={
+        \node[label=below:\tit{dh},
+        draw,circle,
+        scale=0.85,
+        fit to=tree]{};
+        }
             [\phantom{xxx}, roof]
         ]
-    ]
-    [\tsc{ext}
-       [\phantom{xxx}, roof]
-    ]
- ]
- \end{forest}\label{ex:cinque-int-wins}
-
- In order for the internal element to be able to delete the external element, a movement needs to take place. The external element moves over the relative clause.\footnote{
- What remains unclear is what the trigger is for the movement of the external element over relative clause is.
- }
- From this position, the external element can delete the internal one, because the external element c-commands the internal one.
-
- \ex.
- \begin{forest} boom
- [
-     [\tsc{ext}
-        [\phantom{xxx}, roof]
-     ]
-     [FP
-        [CP
-            [\tsc{int}
-               [\phantom{xxx}, roof]
-            ]
-            [CP
+        [\tsc{nom}P,
+        tikz={
+        \node[label=below:\tit{er},
+        draw,circle,
+        scale=0.85,
+        fit to=tree]{};
+        }
+            [\tsc{f}1]
+            [\tsc{ind}P
                 [\phantom{xxx}, roof]
             ]
         ]
-        [\tit{t\scsub{ext}}]
-     ]
- ]
- \end{forest}
+    ]
+    [CP, s sep=15mm
+        [\tsc{rel}P, s sep=15mm,
+        tikz={
+        \node[draw,
+        constituent-deletion,yshift=-0.4cm,rounded corners=2.6cm,
+        dotted,
+        fill=DG,fill opacity=0.2,
+        scale=1.25,
+        fit to=tree]{};
+        }
+            [\tsc{rel}P,
+            tikz={
+            \node[label=below:\tit{dh},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{rel}]
+                [DP
+                    [\phantom{xxx}, roof]
+                ]
+            ]
+            [\tsc{nom}P,
+            tikz={
+            \node[label=below:\tit{er},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{f}1]
+                [\tsc{ind}P
+                    [\phantom{xxx}, roof]
+                ]
+            ]
+        ]
+        [CP
+             [\tit{mina berga chisitzit}, roof]
+        ]
+    ]
+]
+\end{forest}
+\end{adjustbox}
 
- Also talk about D here, and that maybe Old High German deletes a thing without a D when the internal thing wins. does that also have a not so definite interpretation?
+notice here that the light head c-commands the relative pronoun
+that's good, because the lower copy is deleted and people like that
+
+when it is the light head that is deleted, so the relative pronoun should be higher in the structure
+now take the same example but then with the extra light head
+
+-give example with light head-
+
+I propose this:
+
+\ex.
+\begin{forest} boom
+[
+   [CP
+       [\tsc{rel}P
+           [\tsc{rel}P
+               [\phantom{x}\tit{dh}\phantom{x}, roof]
+           ]
+           [\tsc{nom}P,
+           tikz={
+           \node[label=below:{\tit{er}},
+           draw,circle,
+           scale=0.8,
+           fit to=tree]{};
+           \node[draw,circle,
+           dashed,
+           scale=0.85,
+           fit to=tree]{};
+           }
+               [\tsc{f}1]
+               [\tsc{ind}P
+                   [\phantom{xxx}, roof]
+               ]
+           ]
+       ]
+       [CP
+           [\tit{mina berga chisitzit}, roof]
+       ]
+   ]
+   [\tsc{nom}P,
+   tikz={
+   \node[label=below:{\tit{er}},
+   draw,circle,
+   scale=0.8,
+   fit to=tree]{};
+   \node[draw,circle,
+   dashed,
+   scale=0.85,
+   fill=DG,fill opacity=0.2,
+   fit to=tree]{};
+   }
+       [\tsc{f}1]
+       [\tsc{ind}P
+           [\phantom{xxx}, roof]
+       ]
+   ]
+]
+\end{forest}
+
+under kayne's definition of c-command there is c-command
+This is c-command according to Kayne's definition of it: the internal element is in the specifier of the specifier of the FP.
+
+this story works well with matching cases in which there are two different light heads = rp is deleted when there is a lh (formal containment) and elh is deleted when there is a elh (structural containment)
+
+however, it also works when the internal case is more complex. then we namely have the situation as in X, but only the relative pronoun contains an additional case feature. the elh is still structurally contained in the relative pronoun,
+when the external case is more complex it also works. then the derivation goes through a stage in which the cases match (as in X) and there is formal containment
+
+this is not a stipulation (see basic idea, how phrased it there) but this is also proposed in cinque
+
+he says: def = high, indef = low
+this is exactly what I am saying! my lhs are def, so they are high and my elh are indef (they lack def) so they are low
+
+two questions remain: (1) how do the cases end up down on the elh, and (2) what is the relation between the high and the low one?
+
+question (1): Cinque says that it is feature percolation, and I follow that intuition. Technically, what's happening is backtracking, opening up the different workspaces, which leads to the case features finding a match on the element to the left of the relative clause.
+
+Concerning (2), Cinque says it's one and the same element and it's movement. If it's movement, then it can be triggered by spellout or by features. If it's spellout driven then it seems that something happens as soon as the D is merged. The D is merged above where the relative clause attaches. It could be connected to the formation of a complex spec. It seems that once the spec is there, the light head also moves up, and the complex spec does not attach to the relative clause.
+
+notice that this also works for MG and P. In these languages I only had indefs, so it was always the lower elh. that works, because it is c-commanded by the relative pronoun.
 
 
- In the previous section I introduced the relative pronoun as the internal element. This means that the other element is the external element. This section starts with the observation that there actually are languages in which two elements surface in so-called double-headed relative clauses. In these languages, the external head is a subset of the internal head, and that some features like D and case are necessarily excluded in the external head. I adopt this insight, and I apply it to the headless relative situation. I propose that the external head in headless relatives is a copy of a specific part of the relative pronoun.
-
- As I said earlier, I need two elements to do case competition with. In headless relatives, I only see a single one surfacing. However, some languages actually show two elements surfacing. Here there are two copies of the element, one inside the relative clause, one outside of the relative clause.
-
- \exg. [\tbf{doü} adiyan-o-no] \tbf{doü} deyalukhe\\
-  sago give.3\tsc{pl}.\tsc{nonfut}-{tr}-\tsc{conn} sago finished.\tsc{adj}\\
-  `The sago that they gave is finished.' \flushfill{Kombai, \pgcitealt{vries1993}{78}}
-
-The external element is not always an exact copy of the element inside of the relative clause. An example from Kombai shows that the element outside of the relative clause can also be a subset of what the element inside of the relative clause is. Here I give two examples, there is an \tit{old man} and a \tit{person}, and there is \tit{pig} and a \tit{thing}.
-
- \ex.
- \ag. [\tbf{yare} gamo khereja bogi-n-o] \tbf{rumu} na-momof-a\\
-  {old man} join.\ac{ss} work do.\ac{dur}.3\ac{sg}.\ac{nf}-\ac{tr}-\ac{conn} person my-uncle-\ac{pred}\\
-  `The old man, who is joining the work, is my uncle.' 77
- \bg. [\tbf{ai} fali-khano] \tbf{ro} nagu-n-ay-a.\\
-  pig carry-go.3\tsc{pl}.\tsc{nf} thing our-\tsc{tr}-pig-\ac{pred}\\
-  `The pig they took away, is ours.' \flushfill{Kombai, \pgcitealt{vries1993}{77}}
-
- Let me now apply what we have seen so far to headless relatives. Headless relatives do not have an overt NP, so this cannot be copied. However, there is the relative pronoun which is specified for number, gender, case, etc. Are all of these features copied onto the external element? The copy is the portion of the nominal extended projection c-commanded by the relative clause. A headless relative is a restrictive relative clause. Therefore, there is no D and no case.
-
- Is it possible to add features onto the external head after it has been copied? Yes, for example D, as the example shows, but also case.
-
- \exg. Junya-wa [Ayaka-ga \tbf{ringo}-o mui-ta] sono \tbf{ringo}-o tabe-ta.\\
- Junya-\ac{top} Ayaka-\ac{nom} apple-\ac{acc} peel-\ac{pst} that apple-\ac{acc} eat-\ac{pst}\\
- ‘Junya ate the apples that Ayaka peeled.’ \flushfill{Japanese, \pgcitealt{erlewine2016}{2}}
-
- In sum, the external element is a copy of a subset of the features of the relative pronoun. Definiteness and case are not copied. New features can be merged onto the external element.
-
-
-\phantom{x}
 
 \section{Summary}
